 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4916: Pig on Tez fail to remove temporary HDFS files in some cases (daijy)

Release 0.16.0 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4719: Documentation for PIG-4704: Customizable Error Handling for Storers in Pig (daijy)

PIG-4714: Improve logging across multiple components with callerId (daijy)

PIG-4885: Turn off union optimizer if there is PARALLEL clause in union in Tez (rohini)

PIG-4894: Add API for StoreFunc to specify if they are write safe from two different vertices (rohini)

PIG-4884: Tez needs to use DistinctCombiner.Combine (rohini)

PIG-4874: Remove schema tuple reference overhead for replicate join hashmap (rohini)

PIG-4879: Pull latest version of joda-time (rohini)

PIG-4526: Make setting up the build environment easier (nielsbasjes via rohini)

PIG-4641: Print the instance of Object without using toString() (sandyridgeracer via rohini)

PIG-4455: Should use DependencyOrderWalker instead of DepthFirstWalker in MRPrinter (zjffdu via rohini)

PIG-4866: Do not serialize PigContext in configuration to the backend (rohini)

PIG-4547: Update Jython version to 2.7.0 (erwaman via daijy)

PIG-4862: POProject slow by creating StackTrace repeatedly (knoguchi)

PIG-4853: Fetch inputs before starting outputs (rohini)

PIG-4847: POPartialAgg processing and spill improvements (rohini)

PIG-4840: Do not turn off UnionOptimizer for unsupported storefuncs in case of no vertex groups (rohini)

PIG-4843: Turn off combiner in reducer vertex for Tez if bags are in combine plan (rohini)

PIG-4796: Authenticate with Kerberos using a keytab file (nielsbasjes via daijy)
